# auditagent-scoring-algo

./: .env.exemple  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
benchmarks/: REPORT.md  cantina_minimal-delegation_2025_04_results.json  cantina_smart-contract-audit-of-tn-contracts_2025_08_results.json  code4rena_bakerfi-invitational_2025_02_results.json  code4rena_cabal-liquid-staking-token_2025_05_results.json  code4rena_coded-estate-invitational_2024_12_results.json  code4rena_fenix-finance-invitational_2024_10_results.json  code4rena_initia-move_2025_04_results.json  code4rena_iq-ai_2025_03_results.json  code4rena_kinetiq_2025_07_results.json  code4rena_lambowin_2025_02_results.json  code4rena_liquid-ron_2025_03_results.json  code4rena_loopfi_2025_02_results.json  code4rena_pump-science_2025_02_results.json  code4rena_secondswap_2025_02_results.json  code4rena_superposition_2025_01_results.json
data/baseline/: cantina_minimal-delegation_2025_04_results.json  code4rena_bakerfi-invitational_2025_02_results.json  code4rena_coded-estate-invitational_2024_12_results.json  code4rena_fenix-finance-invitational_2024_10_results.json  code4rena_initia-move_2025_04_results.json  code4rena_lambowin_2025_02_results.json  code4rena_liquid-ron_2025_03_results.json  code4rena_loopfi_2025_02_results.json  code4rena_pump-science_2025_02_results.json  code4rena_secondswap_2025_02_results.json  code4rena_superposition_2025_01_results.json
data/repos/: code4rena_iq-ai_2025_03.json  (+14 more)
scoring_algo/: README.md  cli.py  config.py  generate_report.py  main.py  requirements.txt  settings.py
(+35 files in other folders)
